--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 {"id": "7", "file": "7.mp4", "type": "video", "width": 256},
                 {"id": "8", "file": "8.mp4", "type": "video", "width": 512},
                 {"id": "9", "file": "9.mp4", "type": "video", "width": 1024},
-                {"id": "0", "file": ""}
+                {"id": "0", "file": "0.gif", "type": "image"}
             ],
             "2": [
                 {"id": "1", "file": ""},
